Fix alignment of comment count link

--- a/app/assets/stylesheets/reddit.scss
+++ b/app/assets/stylesheets/reddit.scss
@@ -44,6 +44,7 @@
   color: #888;
   font-size: 14px;
   float: right;
+  clear: right;
 }
 
 .comment-count {
